@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2024 the original author or authors.
+ * Copyright 2022-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -202,11 +202,11 @@ public class ManualNackRecordZeroSleepTests {
 				switch (which.getAndIncrement()) {
 					case 0:
 					case 1:
-						return new ConsumerRecords(records1);
+						return new ConsumerRecords(records1, Map.of());
 					case 2:
-						return new ConsumerRecords(records2);
+						return new ConsumerRecords(records2, Map.of());
 					case 3:
-						return new ConsumerRecords(records3);
+						return new ConsumerRecords(records3, Map.of());
 					default:
 						try {
 							Thread.sleep(1000);
@@ -214,7 +214,7 @@ public class ManualNackRecordZeroSleepTests {
 						catch (InterruptedException e) {
 							Thread.currentThread().interrupt();
 						}
-						return new ConsumerRecords(Collections.emptyMap());
+						return new ConsumerRecords(Collections.emptyMap(), Map.of());
 				}
 			}).given(consumer).poll(Duration.ofMillis(ContainerProperties.DEFAULT_POLL_TIMEOUT));
 			willAnswer(i -> {
